[package]
name = "sealed_box"
version = "0.1.0"
edition = "2018"
description = "libsodium sealed box implementation in Rust"
readme = "README.md"
keywords = ["crypto", "sealedbox", "sealed_box"]
license = "MIT"
homepage = "https://github.com/jedisct1/rust-sealed_box"
repository = "https://github.com/jedisct1/rust-sealed_box"
categories = ["no-std", "cryptography", "wasm"]
authors = ["Frank Denis <github@pureftpd.org>"]
